aws/SecurityGroups-ap-southeast-1.json
{
 "SecurityGroups": [
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "default VPC security group", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [], 
     "UserIdGroupPairs": [
      {
       "UserId": "118292266645", 
       "GroupId": "sg-b1e0bad4"
      }
     ], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "default", 
   "VpcId": "vpc-b50c85d0", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-b1e0bad4"
  }
 ]
}
